Fix the soft wrap at <i>, <b>, etc. elements

--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,9 @@ h2 {
 p {
   display: block;
 }
+p * {
+  display: inline;
+}
 
 .description::before {
   content: "–";
